T-005: Add note detail endpoint
